--- a/src/app/module/blog/pages/blog-list/blog-list.component.html
+++ b/src/app/module/blog/pages/blog-list/blog-list.component.html
@@ -7,7 +7,7 @@
     <div class="card-body">
       <h5 class="card-title">{{ blog.title }}</h5>
       <p class="card-text">{{ blog.author }}</p>
-      <p class="card-text">{{ blog.date }}</p>
+      <p class="card-text">{{ blog.comments }}</p>
       <button class="btn btn-primary" (click)="edit(blog.id)">Edit</button>
     </div>
   </div>
